--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ border-color:inherit;
 
 
 #magpie_img {
-    height:15em;
+/*     height:15em; */
     margin-left: 35%;
     display:block;
     
